# diesel_demo

./: Cargo.toml  README.md
migrations/2020-03-22-062713_create_posts/: up.sql
migrations/2020-03-29-012808_create_users_table/: down.sql  up.sql
migrations/2020-04-11-172258_Bootstrap/: down.sql  up.sql
src/: deprecated_models.rs  lib.rs  main.rs  models.rs  schema.rs
