[package]
name = "rust_server"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.1"
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
listenfd = "0.3"
rustc-serialize = "0.3.24"
uuid = { version = "0.8.1", features = ["serde", "v4"] }